--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 # MongoDB Backend API Configuration
 # Backend API URL
-VITE_API_URL=http://localhost:3001/api
+NEXT_PUBLIC_API_URL=http://localhost:3001/api
 
 # Storage Backend Configuration
 # Options: 'localstorage' (default) or 'mongodb'
 # If not set or if MongoDB API is not available, falls back to localstorage
-VITE_STORAGE_BACKEND=localstorage
+NEXT_PUBLIC_STORAGE_BACKEND=localstorage
 
 # Optional: Enable offline mode with sync when using MongoDB
-VITE_ENABLE_OFFLINE_MODE=true
+NEXT_PUBLIC_ENABLE_OFFLINE_MODE=true
 
 # Optional: Sync interval in milliseconds (default: 30000 = 30 seconds)
-VITE_SYNC_INTERVAL_MS=30000
+NEXT_PUBLIC_SYNC_INTERVAL_MS=30000
