Updated the MongoDB integration

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@
 NEXT_PUBLIC_API_URL=http://localhost:3001/api
 
 # Storage Backend Configuration
-# Options: 'localstorage' (default) or 'mongodb'
-# If not set or if MongoDB API is not available, falls back to localstorage
-NEXT_PUBLIC_STORAGE_BACKEND=localstorage
+# Options: 'sync' (default - MongoDB primary with localStorage backup), 'mongodb' (MongoDB only), 'localstorage' (localStorage only)
+# 'sync' implements AP pattern from CAP theorem (Availability + Partition tolerance)
+# - Fetches from MongoDB first when online
+# - Falls back to localStorage when offline
+# - Syncs localStorage changes to MongoDB when connection restored
+NEXT_PUBLIC_STORAGE_BACKEND=sync
 
 # Optional: Enable offline mode with sync when using MongoDB
 NEXT_PUBLIC_ENABLE_OFFLINE_MODE=true
